Feature/register_bank_extension (#103)
Register Bank Extension — 8-Bank Architecture with Full Data/Location Parity

According to docs/proposals/REGISTER_BANK_EXTENSION.md

  Extends the register architecture from 4 banks (DR, LR, PDR, FDR) to 8 banks with consistent [Scope][Type]R naming, 256-spacing base
  IDs, and full parity between data and location registers at every scope level.

  What changed

  New register banks:
  - PLR (Proc-Local Location) — saved/restored on CALL/RET, procedure-local vector storage
  - FLR (Formal Location) — location parameter passing via LREF/LVAL
  - SDR/SLR (Static Data/Location) — persistent per-procedure state with lazy dirty flags

  New calling convention:
  - LREF/LVAL keywords for location parameter passing (parallel to REF/VAL for data)
  - LVAL accepts labels — resolved via fuzzy matching at call time (PSLI instruction)
  - Legacy WITH syntax completely removed — single parameter passing path (REF/VAL/LREF/LVAL)

  New instructions:
  - PSLI — push label position onto location stack (fuzzy matching + ownership check)
  - LRLI — write label position to location register

  Architecture:
  - RegisterBank enum as single source of truth for all bank metadata
  - Flat register array in Organism with O(1) dispatch via lookup tables
  - ProcFrame with generic savedRegisters + parameterBindings (bank-independent)
  - DRY fix: Instruction.resolveOperands() handles LABEL operands generically — removed 2 duplicate overrides

  Visualizer:
  - All 8 banks displayed via REGISTER_BANKS metadata iteration
  - LREF/LVAL parameters shown in call stack with FLR bank
  - Unknown procedure detection in source view (mutation warning)

<!-- This is an auto-generated comment: release notes by coderabbit.ai -->

## Summary by CodeRabbit

# Release Notes

* **New Features**
  * Extended procedure parameter passing with location-aware parameters (`LREF`/`LVAL`) for position vectors.
  * Added new location-manipulation instructions (`PSLI`, `LRLI`) 